--- a/app/src/main/res/layout/activity_sign__in.xml
+++ b/app/src/main/res/layout/activity_sign__in.xml
@@ -4,23 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
     android:orientation="vertical"
     android:background="@drawable/log_back"
-    tools:showIn="@layout/app_bar_main">
+    android:padding="10dp"
+    tools:context=".Sign_In">
+
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:src="@drawable/logos"
         android:scaleType="fitCenter"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:hint="@string/username"
+        android:textColor="@color/colorText"
+        android:textColorHint="@color/colorDivider"
+        android:backgroundTint="@color/colorDivider"
+        android:textSize="18dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:inputType="textPassword"
+        android:hint="@string/password"
+        android:textSize="18dp"
+        android:textColorHint="@color/colorDivider"
+        android:backgroundTint="@color/colorDivider"
+        android:textColor="@color/colorText"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_weight="1"
         android:padding="10dp"
         android:orientation="horizontal"
         >
@@ -42,13 +64,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:text="@string/signIn"
                 android:background="@drawable/rounded_buttton"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
                 android:textSize="18dp"
-                android:onClick="signIn"
                 android:clickable="true"
                 />
         </LinearLayout>
@@ -57,50 +78,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:orientation="vertical">
-            >
-
         </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.3"
-        android:padding="10dp"
-        android:orientation="horizontal"
-        >
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/Dont_have_Acc"
-                android:textColor="@color/colorText"
-                android:textSize="14dp"
-                android:gravity="right"
-                android:paddingRight="5dp"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.59"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/signUp"
-                android:textColor="@color/colorAccent"
-                android:textSize="15dp"
-                android:clickable="true"
-                android:onClick="signUp"
-                />
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_weight="0.5"
+        android:text="@string/forgetpasword"
+        android:textColor="@color/colorPrimaryText"
+        android:textAlignment="center"
+        android:textSize="14dp"
+        android:clickable="true"
+        />
 </LinearLayout>
-
