--- a/app/src/main/res/layout/activity_sign__up__next.xml
+++ b/app/src/main/res/layout/activity_sign__up__next.xml
@@ -112,6 +112,7 @@
                 android:textColor="#ffffff"
                 android:textSize="18dp"
                 android:clickable="true"
+                android:onClick="signup_success"
                 />
         </LinearLayout>
     </LinearLayout>
