--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -13,68 +13,19 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="3"
         android:src="@drawable/logos"
         android:scaleType="fitCenter"
         />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/mobilenumber"
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorDivider"
-        android:backgroundTint="@color/colorDivider"
-        android:textSize="18dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.4"
-        android:text="@string/address"
-        android:textSize="20dp"
-        android:textColor="@color/colorText"
-        android:gravity="bottom"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/line1"
-        android:layout_marginLeft="15dp"
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorDivider"
-        android:backgroundTint="@color/colorDivider"
-        android:textSize="18dp" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/line2"
-        android:layout_marginLeft="15dp"
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorDivider"
-        android:backgroundTint="@color/colorDivider"
-        android:textSize="18dp" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/city"
-        android:layout_marginLeft="15dp"
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorDivider"
-        android:backgroundTint="@color/colorDivider"
-        android:textSize="18dp" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginLeft="15dp"
-        android:backgroundTint="@color/colorDivider"
-        android:hint="@string/state"
+        android:hint="@string/email"
         android:textColor="@color/colorText"
         android:textColorHint="@color/colorDivider"
+        android:backgroundTint="@color/colorDivider"
         android:textSize="18dp" />
 
     <EditText
@@ -82,9 +33,20 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:inputType="textPassword"
-        android:hint="@string/postalCode"
+        android:hint="@string/password"
         android:textSize="18dp"
-        android:layout_marginLeft="15dp"
+        android:textColorHint="@color/colorDivider"
+        android:backgroundTint="@color/colorDivider"
+        android:textColor="@color/colorText"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:inputType="textPassword"
+        android:hint="@string/confirmpass"
+        android:textSize="18dp"
         android:textColorHint="@color/colorDivider"
         android:backgroundTint="@color/colorDivider"
         android:textColor="@color/colorText"
@@ -92,14 +54,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.2"
+        android:layout_weight="1"
         android:padding="10dp"
         android:orientation="horizontal"
         >
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:orientation="vertical">
             >
 
@@ -107,7 +69,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="4"
             android:orientation="vertical">
             >
             <Button
@@ -115,14 +77,23 @@
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="2"
-                android:text="@string/signUp"
+                android:text="@string/reset"
                 android:background="@drawable/rounded_buttton"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
                 android:textSize="18dp"
                 android:clickable="true"
-                android:onClick="signup_success"
+                android:onClick="deals"
                 />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:orientation="vertical">
+        </LinearLayout>
     </LinearLayout>
+
+
+
 </LinearLayout>
