--- a/app/src/main/res/layout/activity_sign__in.xml
+++ b/app/src/main/res/layout/activity_sign__in.xml
@@ -90,5 +90,6 @@
         android:textAlignment="center"
         android:textSize="14dp"
         android:clickable="true"
+        android:onClick="prof"
         />
 </LinearLayout>
